--- a/RAIT.Core/RAIT.Core.csproj
+++ b/RAIT.Core/RAIT.Core.csproj
@@ -7,9 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Reference Include="Microsoft.AspNetCore.Mvc.Core">
-        <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.11\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
-      </Reference>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     </ItemGroup>
+
 
 </Project>
