--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,3 +22,8 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       - name: Test
         run: dotnet test --no-restore --verbosity normal
+
+      - name: Pack
+        run: dotnet pack --no-build --configuration Release
+      - name: PushNuget
+        run: dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.PUBLISH_TO_NUGET_ORG }} --skip-duplicate --no-symbols true
