--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Pack
         run: dotnet pack --no-build --configuration Release
       - name: PushNuget
-        run: dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.PUBLISH_TO_NUGET_ORG }} --skip-duplicate --no-symbols true
+        run: dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.PUBLISH_TO_NUGET_ORG }} --skip-duplicate
