--- a/RAIT.Core/RAIT.Core.csproj
+++ b/RAIT.Core/RAIT.Core.csproj
@@ -6,7 +6,8 @@
         <Nullable>enable</Nullable>
         <PackageId>RAIT</PackageId>
         <Authors>E1ektr0</Authors>
-        <Version>1.0.6</Version>
+        <Version>1.0.7</Version>
+        <ProjectUrl>https://github.com/e1ektr0/RAIT</ProjectUrl>
     </PropertyGroup>
     <PropertyGroup>
         <IsPackable>True</IsPackable>
