Support nullable response

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+.idea/.idea.RAIT/.idea/aws.xml
+.idea/.idea.RAIT/.idea/misc.xml
+RAIT.sln.DotSettings.user
+RAIT.sln.DotSettings.user
