--- a/RAIT.Example.API.Test/RAIT.Example.API.Test.csproj
+++ b/RAIT.Example.API.Test/RAIT.Example.API.Test.csproj
@@ -29,6 +29,9 @@
       <None Update="example.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="example2.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
