--- a/RAIT.Core/RAIT.Core.csproj
+++ b/RAIT.Core/RAIT.Core.csproj
@@ -6,8 +6,12 @@
         <Nullable>enable</Nullable>
         <PackageId>RAIT</PackageId>
         <Authors>E1ektr0</Authors>
-        <Version>1.6.12</Version>
+        <Version>1.6.13</Version>
         <ProjectUrl>https://github.com/e1ektr0/RAIT</ProjectUrl>
+        <Copyright>MIT</Copyright>
+        <PackageProjectUrl>https://github.com/e1ektr0/RAIT</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/e1ektr0/RAIT</RepositoryUrl>
+        <RepositoryType>Github</RepositoryType>
     </PropertyGroup>
     <PropertyGroup>
         <IsPackable>True</IsPackable>
