--- a/RAIT.Example.API/RAIT.Example.API.csproj
+++ b/RAIT.Example.API/RAIT.Example.API.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Ardalis.ApiEndpoints" Version="4.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.32" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.11" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
     <PropertyGroup>
